--- a/index.html
+++ b/index.html
@@ -1933,6 +1933,11 @@ Transclusion expansion time report (%,ms,calls,template)
 			
 		</div>
 		<div class="mw-footer-container">
+<div class="license">
+  Content & design adapted from 
+  <a href="https://en.wikipedia.org/wiki/Kurt_Cobain">Wikipedia</a>,
+  licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
+</div>
 			
 <footer id="footer" class="mw-footer" >
 	<ul id="footer-info">
